--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -1,31 +1,19 @@
 <div class="card-container">
-  <h1 x-large class="sample-content">Your Content Here</h1>
-
-  <div>
-    For material design components use the <a href="https://github.com/AngularClass/angular2-webpack-starter/tree/material2"><b>material2</b></a> branch
-  </div>
 
   <hr>
 
   <div>
-    For hot module reloading run
-    <pre>npm run start:hmr</pre>
-  </div>
-
-  <hr>
-
-  <div>
-    <h4>Local State</h4>
+    <p>Github Username</p>
 
     <form (ngSubmit)="submitState(localState.value)" autocomplete="off">
 
       <input
         [value]="localState.value"
         (input)="localState.value = $event.target.value"
-        placeholder="Submit Local State to App State"
+        placeholder="yathit"
         autofocus>
 
-      <button md-raised-button color="primary">Submit Value</button>
+      <button md-raised-button color="primary">Go</button>
     </form>
     <!--
         <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
@@ -34,7 +22,6 @@
         <input type="text" name="textInput" [(ngModel)]="localState.value" autofocus>
       -->
 
-    <pre>this.localState = {{ localState | json }}</pre>
 
   </div>
 
